# python3-vl53l1

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
STSW-IMG013/: LICENSE.txt  README.txt  releasenotes.txt
STSW-IMG013/kernel_module/: st_tof_module.c
STSW-IMG013/user_lib/: Makefile  main.c  vl53l1_linux_platform.c  vl53l1_platform.h  vl53l1_types.h
vl53l1/: mock_vl53l1.py  vl53l1.py
